--- a/src/main/resources/templates/trainers/trainerPokedexes.html
+++ b/src/main/resources/templates/trainers/trainerPokedexes.html
@@ -7,8 +7,8 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <div th:each="tp:${tpList}">
-        <img th:src="|/pokedex/image/${tp.code}_${tp.name}.png|" class="poke-img exists">
-    </div>
+    <a th:each="tp:${tpList}">
+        <img th:src="|/pokedex/image/${tp.code}_${tp.name}.png|" class="poke-img">
+    </a>
 </body>
 </html>
