--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JWNEO</title>
 </head>
 <body>
-    <a href="/trainer"></a>
+    <a href="/trainer/aaa/pokedex">test</a>
 </body>
 </html>
