feat: 도감 저장기능 추가

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org">
     <div th:fragment="headerFragment" class="header navbar-fixed-top">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="/">포켓몬 띠부씰북</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
@@ -10,7 +10,10 @@
                         <a class="nav-link" href="/trainer/aaa/pokedex">도감</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">판매/구매</a>
+                        <a class="nav-link" href="#">판매</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">구매</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">교환</a>
