--- a/src/main/resources/templates/trainers/trainerPokedexList.html
+++ b/src/main/resources/templates/trainers/trainerPokedexList.html
@@ -1,14 +1,42 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>JWNEO</title>
-    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
-    <link th:href="@{/css/styles.css}" rel="stylesheet">
-</head>
-<body>
-    <a th:each="pokedex : ${pokedexList}">
-        <img th:src="|/pokedex/image/${pokedex.code}_${pokedex.name}.png|" th:class="${#strings.contains(pokeList, pokedex.name)} ? 'poke-img exists' : 'poke-img'">
-    </a>
-</body>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/layout}">
+    <head>
+        <title>도감</title>
+        <script>
+            function dataSend() {
+                var data = {"pokeList": $("div.d-none").text()};
+                $.ajax({
+                    url: "#",
+                    data: data,
+                    type: "POST",
+                })
+            }
+        </script>
+    </head>
+    <body layout:fragment="content">
+        <div class="container">
+            <div th:text="${pokeList}" class="d-none"></div>
+            <div class="row mt-4 justify-content-between">
+                <div class="col-12">
+                    <h1 class="d-inline">도감</h1>
+                    <h3 class="d-inline ml-1 count" th:text="|${pokeCnt} / ${#lists.size(pokedexList)}|"></h3>
+                </div>
+            </div>
+            <div class="row mt-3 justify-content-start">
+                <div class="col-4">
+                    <button type="button" class="btn btn-success" onclick="dataSend()">저장</button>
+                </div>
+            </div>
+            <div class="mt-4">
+                <th:block th:each="pokedex : ${pokedexList}">
+                    <img th:src="|/pokedex/image/${pokedex.code}_${pokedex.name}.png|"
+                         th:class="${#strings.contains(pokeList, pokedex.name)} ? 'poke-img collect' : 'poke-img'"
+                         th:title=${pokedex.name}>
+                </th:block>
+            </div>
+        </div>
+    </body>
 </html>
