--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,11 +3,14 @@
       xmlns:th="http://www.thymeleaf.org">
     <div th:fragment="headerFragment" class="header navbar-fixed-top">
         <nav class="navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">포켓몬 띠부씰북</a>
+            <a class="navbar-brand" href="/">띠부씰북</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/trainer/aaa/pokedex">도감</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">교환</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">판매</a>
@@ -15,13 +18,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">구매</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">교환</a>
-                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">회원가입</a>
+                        <a class="nav-link" href="/trainers/join">회원가입</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">로그인</a>
