add: login controller service 추가

--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -13,5 +13,6 @@
         <!-- css, js 추가 -->
         <link rel="stylesheet" th:href="@{/css/styles.css}">
         <script th:src="@{/js/scripts.js}"></script>
+        <title>JWNEO</title>
     </th:block>
 </html>
