--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/trainers/join">회원가입</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">로그인</a>
+                        <a class="nav-link" href="/trainers/login">로그인</a>
                     </li>
                 </ul>
             </div>
