--- a/src/main/resources/templates/trainers/login.html
+++ b/src/main/resources/templates/trainers/login.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
 </head>
-<body>
-
+<body layout:fragment="content">
+<div class="container">
+    <div class="row mt-4 justify-content-between">
+        <div class="col-12">
+            <h1 class="d-inline">로그인</h1>
+        </div>
+    </div>
+    <div class="row mt-3 justify-content-start">
+        <form role="form" action="#" th:object="${trainerDto}" method="post">
+            <div class="form-group">
+                <label>아이디</label>
+                <input th:field="*{logId}"
+                       th:class="'form-control' + (${#fields.hasErrors('logId')}? ' is-invalid' : '')"
+                       type="text" class="form-control" placeholder="아이디">
+            </div>
+            <div class="form-group">
+                <label>패스워드</label>
+                <input th:field="*{logPassword}"
+                       th:class="'form-control' + (${#fields.hasErrors('logPassword')}? ' is-invalid' : '')"
+                       type="password" class="form-control" placeholder="패스워드">
+            </div>
+            <button type="submit" class="btn btn-primary">로그인</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
