--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/trainer/aaa/pokedex">도감</a>
+                        <a class="nav-link" href="/trainer/jwneo/pokedex">도감</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">교환</a>
@@ -21,10 +21,10 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/trainers/join">회원가입</a>
+                        <a class="nav-link" href="/trainer/join">회원가입</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trainers/login">로그인</a>
+                        <a class="nav-link" href="/login">로그인</a>
                     </li>
                 </ul>
             </div>
