--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,17 +13,15 @@
         </div>
     </div>
     <div class="row mt-3 justify-content-start">
-        <form role="form" action="#" th:object="${trainerDto}" method="post">
+        <form role="form" action="#" th:object="${loginForm}" method="post">
             <div class="form-group">
-                <label>아이디</label>
-                <input th:field="*{logId}"
-                       th:class="'form-control' + (${#fields.hasErrors('logId')}? ' is-invalid' : '')"
+                <input th:field="*{loginId}"
+                       th:class="'form-control' + (${#fields.hasErrors('loginId')}? ' is-invalid' : '')"
                        type="text" class="form-control" placeholder="아이디">
             </div>
             <div class="form-group">
-                <label>패스워드</label>
-                <input th:field="*{logPassword}"
-                       th:class="'form-control' + (${#fields.hasErrors('logPassword')}? ' is-invalid' : '')"
+                <input th:field="*{password}"
+                       th:class="'form-control' + (${#fields.hasErrors('password')}? ' is-invalid' : '')"
                        type="password" class="form-control" placeholder="패스워드">
             </div>
             <button type="submit" class="btn btn-primary">로그인</button>
