--- a/src/main/resources/templates/trainers/join.html
+++ b/src/main/resources/templates/trainers/join.html
@@ -13,20 +13,20 @@
             </div>
         </div>
         <div class="row mt-3 justify-content-start">
-            <form role="form" action="#" th:object="${trainerDto}" method="post">
+            <form role="form" action="#" th:object="${trainerForm}" method="post">
                 <div class="form-group">
                     <label>아이디</label>
-                    <input th:field="*{logId}"
-                           th:class="'form-control' + (${#fields.hasErrors('logId')}? ' is-invalid' : '')"
+                    <input th:field="*{loginId}"
+                           th:class="'form-control' + (${#fields.hasErrors('loginId')}? ' is-invalid' : '')"
                            type="text" class="form-control" placeholder="아이디를 입력하세요">
-                    <div th:errors="*{logId}" th:text ="*{logId}" class="invalid-feedback"></div>
+                    <div th:errors="*{loginId}" th:text ="*{loginId}" class="invalid-feedback"></div>
                 </div>
                 <div class="form-group">
                     <label>패스워드</label>
-                    <input th:field="*{logPassword}"
-                           th:class="'form-control' + (${#fields.hasErrors('logPassword')}? ' is-invalid' : '')"
+                    <input th:field="*{password}"
+                           th:class="'form-control' + (${#fields.hasErrors('password')}? ' is-invalid' : '')"
                            type="password" class="form-control" placeholder="패스워드를 입력하세요">
-                    <div th:errors="*{logPassword}" th:text ="*{logPassword}" class="invalid-feedback"></div>
+                    <div th:errors="*{password}" th:text ="*{password}" class="invalid-feedback"></div>
                 </div>
                 <div class="form-group">
                     <label>이름</label>
