--- a/src/main/resources/templates/trainers/join.html
+++ b/src/main/resources/templates/trainers/join.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="row mt-3 justify-content-start">
-            <form role="form" action="#" th:object="${trainerForm}" method="post">
+            <form role="form" action="/trainer/join" th:object="${trainerForm}" method="post">
                 <div class="form-group">
                     <label>아이디</label>
                     <input th:field="*{loginId}"
