refactor: 도감 img 미디어 쿼리 추가

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,7 +1,13 @@
 .poke-img {
-    height: 130px;
-    width: 95px;
+    width: 9%;
+    height: 10%;
     opacity: 0.2;
+}
+
+@media all and (max-width:767px){
+    .poke-img {
+        width: 19%;
+    }
 }
 
 .collect {
