feat: 회원정보 수정 기능 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,25 +9,20 @@
 <div class="container">
     <div class="row mt-4 justify-content-between">
         <div class="col-12">
-            <h1 class="d-inline">로그인</h1>
+            <h2 class="d-inline">로그인</h2>
         </div>
     </div>
-    <div class="row mt-3 justify-content-start">
+    <div class="row mt-4 ml-1 justify-content-start">
         <form role="form" action="/login" th:object="${loginForm}" method="post">
             <div class="form-group">
-                <input th:field="*{loginId}"
-                       th:class="'form-control' + (${#fields.hasErrors('loginId')}? ' is-invalid' : '')"
-                       type="text" class="form-control" placeholder="아이디">
+                <input th:field="*{loginId}" type="text" class="form-control" placeholder="아이디"
+                       th:class="'form-control' + (${#fields.hasErrors('loginId')}? ' is-invalid' : '')">
                 <div th:errors="*{loginId}" th:text ="*{loginId}" class="invalid-feedback"></div>
             </div>
             <div class="form-group">
-                <input th:field="*{password}"
-                       th:class="'form-control' + (${#fields.hasErrors('password')}? ' is-invalid' : '')"
-                       type="password" class="form-control" placeholder="패스워드">
+                <input th:field="*{password}" type="password" class="form-control" placeholder="패스워드"
+                       th:class="'form-control' + (${#fields.hasErrors('password')}? ' is-invalid' : '')">
                 <div th:errors="*{password}" th:text ="*{password}" class="invalid-feedback"></div>
-            </div>
-            <div class="form-group" th:if="${#fields.hasGlobalErrors()}">
-                <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
             </div>
             <button type="submit" class="btn btn-primary">로그인</button>
         </form>
