--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,8 +7,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a th:if="${#strings.isEmpty(trainer)}" class="nav-link disabled" >도감</a>
-                        <a th:unless="${#strings.isEmpty(trainer)}" th:href="|/trainer/${trainer.loginId}/pokedex|" class="nav-link">도감</a>
+                        <a th:if="${#strings.isEmpty(trainerDto)}" class="nav-link disabled" >도감</a>
+                        <a th:unless="${#strings.isEmpty(trainerDto)}" th:href="|/trainer/${trainerDto.loginId}/pokedex|" class="nav-link">도감</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">교환</a>
@@ -16,12 +16,14 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a th:if="${#strings.isEmpty(trainer)}" class="nav-link" href="/trainer/join">회원가입</a>
-                        <a th:unless="${#strings.isEmpty(trainer)}" th:text="${trainer.loginId}" class="nav-link" href="">아이디</a>
+                        <a th:if="${#strings.isEmpty(trainerDto)}" class="nav-link" href="/trainer/join">회원가입</a>
+                        <a th:unless="${#strings.isEmpty(trainerDto)}"
+                           th:text="${trainerDto.loginId}" class="nav-link"
+                           th:href="|/trainer/${trainerDto.loginId}|">아이디</a>
                     </li>
                     <li class="nav-item">
-                        <a th:if="${#strings.isEmpty(trainer)}" class="nav-link" href="/login">로그인</a>
-                        <a th:unless="${#strings.isEmpty(trainer)}" class="nav-link" href="/logout">로그아웃</a>
+                        <a th:if="${#strings.isEmpty(trainerDto)}" class="nav-link" href="/login">로그인</a>
+                        <a th:unless="${#strings.isEmpty(trainerDto)}" class="nav-link" href="/logout">로그아웃</a>
                     </li>
                 </ul>
             </div>
