--- a/src/main/resources/templates/trainers/join.html
+++ b/src/main/resources/templates/trainers/join.html
@@ -9,35 +9,32 @@
     <div class="container">
         <div class="row mt-4 justify-content-between">
             <div class="col-12">
-                <h1 class="d-inline">회원가입</h1>
+                <h2 class="d-inline">회원가입</h2>
             </div>
         </div>
-        <div class="row mt-3 justify-content-start">
+        <div class="row mt-4 ml-1 justify-content-start">
             <form role="form" action="/trainer/join" th:object="${trainerForm}" method="post">
                 <div class="form-group">
                     <label>아이디</label>
-                    <input th:field="*{loginId}"
-                           th:class="'form-control' + (${#fields.hasErrors('loginId')}? ' is-invalid' : '')"
-                           type="text" class="form-control" placeholder="아이디를 입력하세요">
+                    <input th:field="*{loginId}" type="text" placeholder="아이디를 입력하세요"
+                           th:class="'form-control' + (${#fields.hasErrors('loginId')}? ' is-invalid' : '')">
                     <div th:errors="*{loginId}" th:text ="*{loginId}" class="invalid-feedback"></div>
                 </div>
                 <div class="form-group">
                     <label>패스워드</label>
-                    <input th:field="*{password}"
-                           th:class="'form-control' + (${#fields.hasErrors('password')}? ' is-invalid' : '')"
-                           type="password" class="form-control" placeholder="패스워드를 입력하세요">
+                    <input th:field="*{password}" type="password" placeholder="패스워드를 입력하세요"
+                           th:class="'form-control' + (${#fields.hasErrors('password')}? ' is-invalid' : '')">
                     <div th:errors="*{password}" th:text ="*{password}" class="invalid-feedback"></div>
                 </div>
                 <div class="form-group">
                     <label>이름</label>
-                    <input th:field="*{name}"
-                           th:class="'form-control' + (${#fields.hasErrors('name')}? ' is-invalid' : '')"
-                           type="text" class="form-control" placeholder="이름을 입력하세요">
+                    <input th:field="*{name}" type="text" placeholder="이름을 입력하세요"
+                           th:class="'form-control' + (${#fields.hasErrors('name')}? ' is-invalid' : '')">
                     <div th:errors="*{name}" th:text ="*{name}" class="invalid-feedback"></div>
                 </div>
                 <div class="form-group">
                     <label th:for="city">지역</label>
-                    <input type="text" th:field="*{region}" class="form-control" placeholder="지역을 입력하세요">
+                    <input th:field="*{region}" type="text" placeholder="지역을 입력하세요" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-primary">가입</button>
             </form>
