add: trade list 화면 추가

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
                         <a th:unless="${#strings.isEmpty(trainerDto)}" th:href="|/trainer/${trainerDto.loginId}/pokedex|" class="nav-link">도감</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">교환</a>
+                        <a href="/trade" class="nav-link">교환</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
