--- a/src/main/resources/templates/trades/list.html
+++ b/src/main/resources/templates/trades/list.html
@@ -4,6 +4,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/layout}">
 <head>
+    <style type="text/css">
+         a:link { text-decoration: none;}
+         a:visited { color: black; text-decoration: none;}
+    </style>
 </head>
 <body layout:fragment="content">
     <div class="container">
@@ -19,7 +23,6 @@
             <table class="table table-hover text-center table-sm">
                 <thead class="thead-dark">
                     <tr>
-                        <th>번호</th>
                         <th>제목</th>
                         <th>작성자</th>
                         <th>등록시간</th>
@@ -27,10 +30,17 @@
                 </thead>
                 <tbody>
                     <tr th:each="trade: ${tradeList}">
-                        <td th:text="${trade.id}"></td>
                         <td><a th:text="${trade.title}" th:href="|/trade/${trade.id}|"></a></td>
                         <td th:text="${trade.trainer.name}"></td>
-                        <td th:text="${trade.createdDate}"></td>
+                        <td th:with="date = ${#temporals.format(trade.createdDate, 'yyyy-MM-dd')},
+                                     time = ${#temporals.format(trade.createdDate, 'HH:mm:ss')}">
+                            <div th:if="${date == #strings.toString(#temporals.createToday())}"
+                                 th:text="${time}">
+                            </div>
+                            <div th:unless="${date == #strings.toString(#temporals.createToday())}"
+                                 th:text="${date}">
+                            </div>
+                        </td>
                     </tr>
                 </tbody>
             </table>
