--- a/src/main/resources/templates/trades/view.html
+++ b/src/main/resources/templates/trades/view.html
@@ -7,6 +7,12 @@
     <style type="text/css">
          a:link { text-decoration: none;}
          a:visited { color: black; text-decoration: none;}
+
+         .scrollable-menu {
+            height: auto;
+            max-height: 300px;
+            overflow-x: hidden;
+        }
     </style>
 </head>
 <body layout:fragment="content">
@@ -18,24 +24,39 @@
         </div>
         <div class="row mt-4 justify-content-between">
             <div class="col-6">
-                <h5 class="d-inline" th:text="${trade.title}"></h5>
+                <h4 class="d-inline" th:text="${trade.title}"></h4>
             </div>
             <div class="col-6">
                 <p class="float-right" th:text="${#temporals.format(trade.createdDate, 'yyyy.MM.dd HH:mm')}"></p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <p th:text="${trade.trainer.name}"></p>
+        <div class="row pb-3 border-bottom">
+            <div class="col-6">
+                <div class="dropdown">
+                    <a th:text="${trade.trainer.loginId}"
+                       class="dropdown-toggle pl-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </a>
+                    <div class="dropdown-menu scrollable-menu" aria-labelledby="dropdownMenuButton">
+                        <p>보유 포켓몬</p>
+                        <hr class="dropdown-divider">
+                        <th:block th:each="pokedex : ${pokedexList}">
+                            <p th:if="${#strings.contains(trade.trainer.pokeList, '/'+pokedex.name+'/')}"
+                               th:text="|${#numbers.formatInteger(pokedex.code,3)}) ${pokedex.name}|">
+                            </p>
+                        </th:block>
+                    </div>
+                </div>
+            </div>
+            <div th:if="!${#strings.isEmpty(trainerDto)} and ${trainerDto.loginId}==${trade.trainer.loginId}" class="col-6">
+                <a class="float-right pl-3" href="">삭제</a>
+                <a class="float-right" href="">수정</a>
             </div>
         </div>
-        <div class="row">
+        <div class="pt-4 pb-3 row border-bottom">
             <div class="col-12">
-                <p class="float-right" th:text="${trade.trainer.pokeList}"></p>
+                <p th:text="${trade.content}"></p>
             </div>
         </div>
-        <div class="row" th:text="${trade.content}"></div>
-        <div class="row" th:text="${trade.trainer.name}"></div>
     </div>
 </body>
 </html>
