--- a/src/main/resources/templates/trades/view.html
+++ b/src/main/resources/templates/trades/view.html
@@ -20,6 +20,7 @@
         <div class="row mt-4 justify-content-between">
             <div class="col-8">
                 <h2 class="d-inline"><a href="/trade">교환</a></h2>
+                <h4 class="d-inline ml-1 count" th:text="${trade.trainer.address.region}"></h4>
             </div>
         </div>
         <div class="row mt-4 justify-content-between">
