feat: trade 새글 기능 추가

--- a/src/main/resources/templates/trades/list.html
+++ b/src/main/resources/templates/trades/list.html
@@ -20,7 +20,7 @@
                 <button class="btn btn-success float-right" onclick="location.href='/trade/write'">새글</button>
             </div>
         </div>
-        <div class="row mt-4 ml-1 table-responsive">
+        <div class="row mt-4 ml-1 pr-1 table-responsive">
             <table class="table table-hover text-center table-sm">
                 <thead class="thead-dark">
                     <tr>
