--- a/src/main/resources/templates/trades/write.html
+++ b/src/main/resources/templates/trades/write.html
@@ -5,8 +5,13 @@
       layout:decorate="~{fragments/layout}">
 <head>
     <style type="text/css">
-         a:link { text-decoration: none;}
-         a:visited { color: black; text-decoration: none;}
+         a:link {
+            text-decoration: none;
+         }
+         a:visited {
+            color: black;
+            text-decoration: none;
+         }
          textarea {
             height: 50px;
             border: none;
@@ -22,7 +27,7 @@
                 <h4 class="d-inline ml-1 count">새글</h4>
             </div>
         </div>
-        <div style="height:100%" class="mt-4">
+        <div class="mt-4">
             <form role="form" action="/trade/write" th:object="${tradeForm}" method="post">
                 <div class="row mt-4 ml-1 mr-1 justify-content-between">
                     <div class="col-9">
@@ -32,9 +37,9 @@
                         <button type="submit" class="btn btn-primary float-right">저장</button>
                     </div>
                 </div>
-                <div class="row mt-4 ml-1 mr-1 justify-content-between">
+                <div style="height: 73vh" class="row mt-4 ml-1 mr-1 justify-content-between">
                     <div class="col-12">
-                        <textarea th:field="*{content}" type="text" class="form-control" placeholder="내용"></textarea>
+                        <textarea th:field="*{content}" type="text" class="form-control h-100" placeholder="내용"></textarea>
                     </div>
                 </div>
             </form>
